# lang

./: .gitignore  .gitmodules  LICENSE  README.md
Coq/docs/: README.md
brainfuck/666/: Makefile
brainfuck/game-of-life/: Makefile
brainfuck/hello-world/: Makefile  README.md
c/array-ptr/: malloc.c  ptr.c
c/cache-line-size/: Makefile  foo.c
c/const/: Makefile  main.cpp  ref.h
c/continuation/: README.md
c/extern-const-global/: Makefile  README.md  a.cpp  a.i  b.cpp  b.h  main.i
c/flex-bison-err-report/: Makefile  README.md
c/ieee-754/: Makefile  README.md  ieee-754.c
c/linker-order/: Makefile  main.cpp
c/mm-align/: Makefile  align.c
c/obj-dump/: Makefile  if.c  if.s  switch.c  switch.s
c/serial-port/: Makefile  main.c  serial.c  serial.h
c/stack-protector/: Makefile  loop.c
cpp/: README.md
cpp/antlr-cpp/: CMakeLists.txt  README.md  scene-gen.sh
cpp/antlr-cpp/include/Scene/Parse/: SceneBaseVisitor.h  SceneLexer.h  SceneParser.h  SceneVisitor.h
cpp/antlr-cpp/lib/: CMakeLists.txt
cpp/antlr-cpp/lib/Parse/: CMakeLists.txt  SceneBaseVisitor.cpp  SceneLexer.cpp  SceneParser.cpp  SceneVisitor.cpp
cpp/antlr-cpp/lib/antlr4-runtime/: CMakeLists.txt
cpp/antlr-cpp/test/: example.in
cpp/antlr-cpp/tools/: CMakeLists.txt
cpp/antlr-cpp/tools/lex/: CMakeLists.txt  main.cpp
cpp/arg-parse/: Makefile  colors.h  foo.ph  (+2 more)
dart/: README.md
lua/: README.md  semish94.ps
powershell/: README.md
python/: .gitignore  README.md
ruby/: README.md
rust/: README.md
shell/: change-author-info.sh  loc-counter.sh  map.sh  os-version.sh  port-listen.sh
(+1101 files in other folders)
